--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
   <div id="info">
     <h3>Minecraft Skin Creator</h3>
     <p><strong>Režim barev:</strong> Klikněte na část postavy pro výběr a změňte barvu pomocí barevného výběru.</p>
-    <p><strong>Režim pixelů:</strong> Kreslete přímo na 3D model pomocí štětce. Velikost štětce můžete měnit pomocí tlačítek + a -.</p>
+    <p><strong>Režim pixelů:</strong> Kreslete přímo na 3D model v mřížce odpovídající Minecraft skinu:</p>
+    <ul>
+      <li>Hlava: 8×8 pixelů</li>
+      <li>Tělo: 8×12 pixelů</li>
+      <li>Končetiny: 4×12 pixelů</li>
+    </ul>
+    <p>Kliknutím na část modelu vyberete konkrétní pixel v mřížce a obarvíte ho zvolenou barvou.</p>
     <p>Tlačítko "Uložit PNG" uloží aktuální pohled.</p>
     <p>Tlačítko "Exportovat šablonu" vytvoří 64x64 Minecraft skin šablonu.</p>
     <p>Tlačítko "Editovat šablonu" otevře editor pro úpravu celé šablony skinu.</p>
