add rotation controls and instructions for pixel mode in Minecraft Skin Creator
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       <button id="colorModeBtn" class="active">Režim barev</button>
       <button id="pixelModeBtn">Režim pixelů</button>
     </div>
+    <div id="rotationControls">
+      <button id="rotateLeftBtn"><i class="fas fa-undo"></i></button>
+      <button id="rotateRightBtn"><i class="fas fa-redo"></i></button>
+      <button id="rotateUpBtn"><i class="fas fa-arrow-up"></i></button>
+      <button id="rotateDownBtn"><i class="fas fa-arrow-down"></i></button>
+    </div>
     <button id="saveBtn">Uložit PNG</button>
     <button id="exportTemplateBtn">Exportovat šablonu</button>
     <button id="editPixelsBtn">Editovat šablonu</button>
@@ -35,6 +41,7 @@
       <li>Končetiny: 4×12 pixelů</li>
     </ul>
     <p>Kliknutím na část modelu vyberete konkrétní pixel v mřížce a obarvíte ho zvolenou barvou.</p>
+    <p><strong>Otáčení v pixel módu:</strong> Použijte tlačítka pro otáčení nebo dva prsty na dotykové obrazovce.</p>
     <p>Tlačítko "Uložit PNG" uloží aktuální pohled.</p>
     <p>Tlačítko "Exportovat šablonu" vytvoří 64x64 Minecraft skin šablonu.</p>
     <p>Tlačítko "Editovat šablonu" otevře editor pro úpravu celé šablony skinu.</p>
